# DatsNewWay

./: .clangd  .gitignore  CMakeLists.txt  README.md
Assets/Shaders/Skybox/: skybox.frag  skybox.vert
Snake3D/: CMakeLists.txt  pch.h
Snake3D/src/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  Log.cpp  Log.h  Timestep.h
Snake3D/src/Game/: Game.cpp  Game.h  GameObjects.h
Snake3D/src/Renderer/: Renderer.cpp  Renderer.h
Snake3D/src/Server/: Server.cpp  Server.h
Snake3D/src/Utils/: Timer.h
